--- a/index.html
+++ b/index.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Profile card component</title>
+  <link rel="" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Profile card component</title>
+
+
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
 
-  80K
-  Followers
+  <main class="container">
 
-  803K
-  Likes
+    <container class="card_container">
 
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <picture class="profile_picture">
+        <img src="images/image-victor.jpg" alt="victo's picture">
+      </picture>
+      <section class="profile_personal_info">
+        <h1>Victor Crest</h1>
+        <p>26</p>
+        <span>London</span>
+      </section>
+      <section class="profile_info">
+        <article class="followers">
+          <h1>80K</h1>
+          <span>Followers</span>
+        </article>
+        <article class="likes">
+          <h1>803K</h1>
+          <span>Likes</span>
+        </article>
+        <article class="photos">
+          <h1>1.4K</h1>
+          <span>Photos</span>
+        </article>
+      </section>
+    </container>
+
+  </main>
+
 </body>
+
 </html>
