the html code for "index.html" has been added

--- a/index.html
+++ b/index.html
@@ -22,28 +22,35 @@
   <main class="container">
 
     <container class="card_container">
+      <picture class="back_profile_image">
+        <img src="images/bg-pattern-card.svg" alt="color picture">
+      </picture>
 
       <picture class="profile_picture">
-        <img src="images/image-victor.jpg" alt="victo's picture">
+        <img src="images/image-victor.jpg" alt="">
       </picture>
+
       <section class="profile_personal_info">
-        <h1>Victor Crest</h1>
-        <p>26</p>
-        <span>London</span>
+        <h1>Victor Crest <span>26</span> </h1>
+        <p>London</p>
       </section>
-      <section class="profile_info">
+
+      <section class="profile_info grid">
         <article class="followers">
           <h1>80K</h1>
           <span>Followers</span>
         </article>
+
         <article class="likes">
           <h1>803K</h1>
           <span>Likes</span>
         </article>
+
         <article class="photos">
           <h1>1.4K</h1>
           <span>Photos</span>
         </article>
+
       </section>
     </container>
 
